--- a/Z2.html
+++ b/Z2.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Bitbucket | The Git solution for professional teams</title>
     <style>
+        html,body{
+            overflow: hidden;
+            height:100%;
+        }
         div.header{
             font-family: Charlie Text,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Noto Sans,Ubuntu,Droid Sans,Helvetica Neue,sans-serif;
             font-weight: bold;
@@ -14,15 +18,15 @@
         div.p1
         {
             position:relative;
-            top:1px;
-            left:380px;
+            top:-6px;
+            left:260px;
             margin: 0 auto;
         }
         div.p2
         {
             position:relative;
-            top:20px;
-            left:400px;
+            top:15px;
+            left:280px;
             font-weight: normal;
             margin: 0 auto;
         }
@@ -39,7 +43,7 @@
         {
             position:absolute;
             top:94px;
-            left:640px;
+            left:520px;
             text-align:center;
             color: #253858;
             font-weight: bolder;
@@ -52,7 +56,7 @@
         {
             position:absolute;
             top:204px;
-            left:490px;
+            left:370px;
             text-align:center;
             color: #42526E;
             font-family:Charlie Text,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Noto Sans,Ubuntu,Droid Sans,Helvetica Neue,sans-serif;
@@ -62,28 +66,48 @@
             line-height: 1.4;
         }
 
-        #center button{
-            width: 230px;
-            background-color: #0052CC;
-            color: white;
-            margin-left: 10px;
-            font-family: Charlie Text,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Noto Sans,Ubuntu,Droid Sans,Helvetica Neue,sans-serif;
+        #center a{
             font-weight: bold;
-            font-size:15px;
-            position:absolute;
-            top:74px;
-            left:330px;
-            text-align:center;
+            font-family: Charlie Text,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Noto Sans,Ubuntu,Droid Sans,Helvetica Neue,sans-serif;
+            font-style: normal;
+            font-size:1rem;
+            color: #FFF;
+            white-space: nowrap;
+            background: #0052CC;
+            border: 1px solid #0052CC;
             height: 40px;
             line-height: 38px;
             padding: 0 16px;
             border-radius: 3px;
-            margin-bottom: 24px;
             display: inline-block;
+            text-decoration: none;
+            vertical-align: baseline;
+            text-align: center;
+            box-sizing: inherit;
+            position:absolute;
+            top:80px;
+            left:340px;
+
         }
         #Lphoto{
             position:absolute;
             top:190px;
+
+        }
+        .border{
+            margin-bottom: 0;
+            background: 0 0;
+            color: #0052CC;
+            white-space: nowrap;
+            border: 1px solid #0052CC;
+            height: 30px;
+            padding: 0 10px;
+            display: inline-block;
+            text-decoration: none;
+            vertical-align: baseline;
+            box-sizing: inherit;
+            position:relative;
+            top:-9px;
 
         }
 
@@ -95,16 +119,19 @@
 <div class="header">
     <div class="p1">
     <a href="Z2.html">
-        <img src="BB1.PNG" height="59" width="179"/></a>
+        <img src="BB1.PNG" height="58" width="179"/></a>
     </div>
     <div class="p2">&emsp;<a href="">Features</a>&emsp;&ensp;&ensp;
     <a href="">Enterprise</a>&emsp;&ensp;&ensp;<a href="">Pricing</a>
     &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-    <a href="">Log in</a>&emsp;&emsp;
-        <span class="border"><a href="" style="font-weight: bolder;font-size: 1rem;
-    line-height: 1.75;">Get Started</a></span>
+        <a href="">Log in</a>&emsp;&emsp;
+        <div class="border">
+            <a href="" style="font-weight: bolder;font-size: 1rem;
+    line-height: 1.75;">Get Started</a>
+        </div>
     </div>
 </div>
+
 <h1 class="head">
     Built for professional teams.
 </h1>
@@ -112,16 +139,16 @@
     Bitbucket is more than just Git code management. Bitbucket gives teams one place to plan<br>
     projects, collaborate on code, test and deploy.
     <div id="center">
-    <button>Get started for free</button>
+    <a href="#">Get started for free</a>
     </div>
     <div id="explain" style="font-size: 1rem;line-height: 24px;
-    margin-bottom: 24px;font-weight: normal">
-        <br><br><br>
-        Or host it yourself with &emsp;<a href="">Bitbucket Enterprise→</a>
+    margin-bottom: 24px;font-weight: normal;color:#000000">
+        <br><br><br><br>
+        Or host it yourself with &ensp;<a href="">Bitbucket Enterprise&nbsp;<span style="font-size: 1.4rem">→</span></a>
     </div>
     <div id="Lphoto" style="max-width: 100%;">
         <img src="BB2.png" height="321" width="937"/>
     </div>
-
+</div>
 </body>
 </html>
